# Master-Thesis

./: .gitignore  README.md  requirements.txt
env/: pyproject.toml
env/custom_marl_aquarium/: aquarium_v0.py
env/custom_marl_aquarium.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
env/custom_marl_aquarium/env/: animal.py  aquarium - ohne velo.py  aquarium.py  predator.py  prey.py  utils.py  view.py
models/: encoder.pt  modular_policy.pt
notebooks/: 1. dataset.ipynb  1.1 Couzin dataset.ipynb  1.1 GAIL - Component Testing.ipynb  1.1 Video Dataset.ipynb  1.1 Video dataset - prey_only.ipynb  1.1 Video dataset.ipynb  1.2 Couzin dataset.ipynb  1.2 Hand-Labeled Data.ipynb  1.2 pretuning models - flagged.ipynb  1.2 pretuning models - seperate heads.ipynb  1.2 pretuning models.ipynb  1.2.1 Policy Visualisation.ipynb  1.3 GAIL - Prey-Only.ipynb  1.3 GAIL - Sequence Prey Only.ipynb  1.4 GAIL - Predator-Prey.ipynb  1.4 GAIL - Sequence Predator-Prey.ipynb  1.4 Hand-labeling.ipynb  1.5 GAIL - Pretrain Policy & Encoder.ipynb  1.5 GAIL - Video Predator-Prey.ipynb  2. train.ipynb  2.1 GAIL - Prey-Only.ipynb  2.1 Video Env Settings Analysis.ipynb  2.1 tuning.ipynb  2.2 BC training.ipynb  (+20 more)
notebooks - alt/: 2.2 BC training.ipynb  3.1 policy evaluation.ipynb  3.2 experiment - garcia.ipynb  test_env.ipynb
notebooks - gail_testing/: 1.3 GAIL - Sequence Prey Only.ipynb  1.4 GAIL - Sequence Predator-Prey.ipynb  1.5 GAIL - Pretrain Policy & Encoder.ipynb  1.5 GAIL - Video Predator-Prey.ipynb  2. Sim Env.ipynb  4. Feature Clustering.ipynb  5. Dataset Windows.ipynb  6. Experiments.ipynb
(+147 files in other folders)
